fix: avoid cutting off text in image

--- a/client/src/components/_custom/drp/PublishedDatasets/PublishedDataset.module.css
+++ b/client/src/components/_custom/drp/PublishedDatasets/PublishedDataset.module.css
@@ -3,4 +3,7 @@
     object-fit: cover;
     max-height: 300px;
     width: 100%;
+
+    /* to avoid cutting off words in an image */
+    object-position: left;
 }
