--- a/client/src/components/_custom/drp/PublishedDatasets/styles/customize-core-styles.global.css
+++ b/client/src/components/_custom/drp/PublishedDatasets/styles/customize-core-styles.global.css
@@ -22,6 +22,9 @@
     object-fit: cover;
     max-height: 300px;
     width: 100%;
+
+    /* to avoid cutting off words in an image */
+    object-position: left;
 }
 
 /* to allow long file names to wrap */
